Accepted IDE suggested changes